--- a/style.css
+++ b/style.css
@@ -29,3 +29,55 @@ html {
   font-size: 18px;
   color: #e5e7eb;
 }
+
+.hero {
+  display: flex;
+  gap: 40px;
+  padding: 60px 200px 80px;
+  background-color: #1f2937;
+}
+
+.hero > * {
+  flex: 1;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  border-radius: 20px;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
+  padding: 10px;
+}
+
+.hero-main {
+  font-size: 48px;
+  font-weight: 900;
+  color: #f9faf8;
+}
+
+.hero-secondary {
+  text-align: center;
+  font-size: 18px;
+  color: #f9faf8;
+}
+
+p, button {
+  margin: 0;
+}
+
+button {
+  background-color: #3882f660;
+  color: #f9faf8;
+  width: 120px;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-size: 18px;
+}
