--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ button {
   flex-direction: column;
   align-items: center;
   gap: 40px;
-  padding: 40px 0;
+  padding: 50px 0;
 }
 
 .content-title {
@@ -130,4 +130,33 @@ button {
   border-radius: 20px;
   border: 2px solid #fff;
   box-shadow: 10px 10px 5px #ccc;
+}
+
+.quote-section {
+  background-color: #e5e7eb;
+  padding: 70px 0;
+}
+
+.quote-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  gap: 20px;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  color: #1f2937a1;
+  font-weight: 100;
+  flex-basis: auto;
+  margin-left: auto;
+}
+
+.quote-author {
+  font-size: 20px;
+  font-weight: 600;
 }
